# cookiecutter-templates

./: README.md
python/: cookiecutter.json
python/{{cookiecutter.project_slug}}/: LICENSE.txt  pyproject.toml  setup.cfg  setup.py
python/{{cookiecutter.project_slug}}/docs/: conf.py
python/{{cookiecutter.project_slug}}/tests/test_{{cookiecutter.project_slug}}/: test_greet.py
