[metadata]
name = {{cookiecutter.project_name}}
version = {{cookiecutter.version}}
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
description = {{cookiecutter.project_short_description}}
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    appdirs >= 1.4.4
    click >= 8.0.3
    click_config_file >= 0.6.0
python_requires = >= 3.9
packages = find_namespace:
package_dir =
    = src

[options.extras_require]
dev =
    Sphinx >= 4.2.0
    black >= 21.9b0
    coverage[toml] >= 6.0.2
    mypy >= 0.910
    pytest >= 6.2.5
    tox >= 3.24.4
    types-appdirs >= 1.4.1
    types-pkg_resources >= 0.1.3
    types-six >= 1.16.2

[options.entry_points]
console_scripts =
  {{cookiecutter.project_slug}} = {{cookiecutter.project_slug}}.__main__:main

[options.packages.find]
where = src

[tox:tox]
skipsdist = True

[testenv]
commands =
  {envpython} -m black --check --diff src tests setup.py docs
  {envpython} -m mypy \
    --package {{cookiecutter.project_slug}} \
    --package test_{{cookiecutter.project_slug}} \
    --package docs
  {envpython} -m mypy setup.py
  {envpython} -m coverage erase
  {envpython} -m coverage run
  {envpython} -m coverage report
extras = dev
usedevelop = True
